# global-components

./: .licenseignore  .stylefilter  CMakeLists.txt  Findglobal-components.cmake  README.md  global-components.cmake  global-connectors.cmake
components/ClockServer/: CMakeLists.txt  ClockServer.camkes  README.md
components/ClockServer/camkes-include/: Clock.idl4  ClockServerInterfaces.camkes  camkes-ClockServer.h
components/ClockServer/include/plat/exynos5/plat/: clock.h
components/ClockServer/include/plat/imx6/plat/: clock.h
components/ClockServer/include/plat/tx2/plat/: clock.h
components/ClockServer/libClockServer-client/: CMakeLists.txt  clockserver_client.c
components/ClockServer/libClockServer-client/include/: clockserver_client.h
components/ClockServer/src/: clock_server.c  plat.h
components/ClockServer/templates/: ClockServer-client.template.c  ClockServer.template.c
components/FileServer/: CMakeLists.txt  FileServer.camkes  FileServer.mk  README.md
components/FileServer/libFileServer-client/: CMakeLists.txt  fsclient.c  fsclient.h
components/FileServer/src/: server.c
components/GPIOMUXServer/: CMakeLists.txt  GPIOMUXServer.camkes  README.md
components/GPIOMUXServer/camkes-include/: GPIO.idl4  GPIOServerInterfaces.camkes  MUX.idl4  MUXServerInterfaces.camkes  camkes-GPIOServer.h  camkes-MUXServer.h
components/GPIOMUXServer/include/plat/exynos5/plat/: gpio.h  mux.h
components/GPIOMUXServer/include/plat/tx2/plat/: gpio.h  mux.h
components/GPIOMUXServer/libGPIOMUXServer-client/: CMakeLists.txt  gpio.c  mux.c
components/GPIOMUXServer/libGPIOMUXServer-client/include/: gpiomuxserver.h
components/GPIOMUXServer/libGPIOMUXServer-client/plat_include/exynos5/: gpiomuxserver_plat.h
components/GPIOMUXServer/libGPIOMUXServer-client/plat_include/tx2/: gpiomuxserver_plat.h
components/GPIOMUXServer/src/: common.c  gpio.c  gpio.h  mux.c  mux.h
components/GPIOMUXServer/templates/: GPIOServer-client.template.c  GPIOServer.template.c  MUXServer-client.template.c  MUXServer.template.c
components/ResetServer/: CMakeLists.txt  README.md  ResetServer.camkes
components/ResetServer/camkes-include/: Reset.idl4  ResetServerInterfaces.camkes  camkes-ResetServer.h
components/ResetServer/include/plat/tx2/plat/: reset.h
components/ResetServer/libResetServer-client/: CMakeLists.txt  resetserver_client.c
components/ResetServer/libResetServer-client/include/: resetserver_client.h
components/ResetServer/src/: plat.h  reset.c
components/ResetServer/src/plat/tx2/: plat.c
components/ResetServer/templates/: ResetServer-client.template.c  ResetServer.template.c
components/SerialServer/: CMakeLists.txt  README.md  SerialServer.camkes
components/SerialServer/camkes-putchar-client/: CMakeLists.txt
components/SerialServer/camkes-putchar-client/camkes-include/: SerialServer-camkes-putchar-client.camkes  camkes-SerialServer-camkes-putchar-client.h
components/SerialServer/camkes-putchar-client/templates/: SerialServer-camkes-putchar-client.template.c
components/SerialServer/include/plat/arm_common/plat/: serial.h
components/SerialServer/include/plat/tk1/plat/: serial.h
components/SerialServer/src/: plat.c  plat.h  serial.c  serial.h  server_virtqueue.c  server_virtqueue.h
components/SerialServer/src/plat/arm_common/: plat.c
components/SerialServer/src/plat/bcm2711/: plat.c
components/SerialServer/src/plat/exynos5/: plat.c
components/SerialServer/src/plat/hifive/: plat.c
components/SerialServer/src/plat/pc99/: plat.c
components/SerialServer/src/plat/zynq7000/: plat.c
components/SerialServer/src/plat/zynqmp/: plat.c
components/SerialServer/templates/: seL4SerialServer.template.h
components/modules/lwip-base/: CMakeLists.txt  lwip-init.c
components/modules/lwip-base/camkes-include/: camkes-lwip-base.h  lwip-base.camkes
components/modules/lwip-base/templates/: lwip-init.template.c
components/modules/picotcp-base/: CMakeLists.txt  picotcp-init.c
components/modules/picotcp-base/camkes-include/: camkes-picotcp-base.h  picotcp-base.camkes
components/modules/picotcp-base/templates/: pico-init.template.c
plat_components/tx2/BPMPServer/: BPMPServer.camkes  CMakeLists.txt  README.md
plat_components/tx2/BPMPServer/camkes-include/: BPMP.idl4  BPMPServerInterfaces.camkes  camkes-BPMPServer.h
plat_components/tx2/BPMPServer/libBPMPServer-client/: CMakeLists.txt  bpmpserver_client.c
plat_components/tx2/BPMPServer/libBPMPServer-client/include/: bpmpserver_client.h
plat_components/tx2/BPMPServer/src/: bpmp.c  server.c
plat_components/tx2/BPMPServer/templates/: BPMPServer-client.template.c  BPMPServer.template.c
remote-drivers/lwip-ethernet-async/: CMakeLists.txt  client.c  server.c
remote-drivers/lwip-ethernet-async/camkes-include/: camkes-lwip-ethernet-async.h  lwip-ethernet-async-control.idl4  lwip-ethernet-async.camkes
remote-drivers/lwip-ethernet-async/include/: lwip-ethernet-async.h
remote-drivers/lwip-ethernet-async/templates/: lwip-ethernet-async-client-init.template.c  lwip-ethernet-async-server-init.template.c
remote-drivers/picotcp-ethernet-async/: CMakeLists.txt  client.c  server.c
remote-drivers/picotcp-ethernet-async/camkes-include/: camkes-picotcp-ethernet-async.h  picotcp-ethernet-async-control.idl4  picotcp-ethernet-async.camkes
remote-drivers/picotcp-ethernet-async/include/: picotcp-ethernet-async.h
remote-drivers/picotcp-ethernet-async/templates/: picotcp-ethernet-async-client-init.template.c  picotcp-ethernet-async-server-init.template.c
remote-drivers/picotcp-socket-sync/: CMakeLists.txt
remote-drivers/picotcp-socket-sync/camkes-include/: camkes-picotcp-socket-sync.h  picotcp-socket-sync.camkes
remote-drivers/picotcp-socket-sync/client_include/: CMakeLists.txt  picoserver.h  picoserver_event.h  picoserver_peer.h
remote-drivers/picotcp-socket-sync/include/: picotcp-socket-sync.h
remote-drivers/picotcp-socket-sync/server/: khash.h  picoserver_client.c  picoserver_client.h  picoserver_socket.h  server.c
remote-drivers/picotcp-socket-sync/templates/: picotcp-socket-sync-server-init.template.c
(+167 files in other folders)
